# cpp

./: .gitignore
Concurrent-Data-Structures/: 00_concurrent_design_princpiples_and_guidelines.cpp
Concurrent-Data-Structures/lookup_table/: threadsafe_lookup_table.cpp  threadsafe_lookup_table_using_stl.cpp
Concurrent-Data-Structures/queue/: dummy_node.cpp  thread_safe_queue_1.cpp  thread_safe_queue_2.cpp  thread_safe_queue_3_fine_locking.cpp  thread_safe_queue_4_with_waiting.cpp
Concurrent-Data-Structures/stack/: improved_stack.cpp  problematic_stack.cpp  stack.hpp  stack_demos.cpp
Parallel-Index/: CMakeLists.txt
Parallel-Index/my_documents/: doc2.md  hello.cpp
Parallel-Index/src/: CMakeLists.txt  ConcurrentQueue.hpp  FileInfo.hpp  FileScanner.cpp  FileScanner.hpp  IndexerWorker.cpp  IndexerWorker.hpp  InvertedIndex.cpp  InvertedIndex.hpp  Utils.cpp  Utils.hpp  main.cpp
Parallel-Index/tests/: CMakeLists.txt  test_concurrent_queue.cpp  test_inverted_index.cpp  test_utils.cpp
Task-Scheduler/: CMakeLists.txt  README.md
Task-Scheduler/include/scheduler/: dependency_manager.hpp  priority_queue.hpp  task.hpp  task_scheduler.hpp  thread_pool.hpp
Task-Scheduler/src/: dependency_manager.cpp  prioirity_queue.cpp  task.cpp  task_scheduler.cpp  thread_pool.cpp
concurrency/: 02_00_assert.cpp  02_00_function_pointers.cpp  02_01_threads.txt  02_02_launching_a_thread.cpp  02_03_detach_and_local_variables.cpp  02_04_waiting_in_exceptional_circumstances.cpp  02_05_thread_gaurd.cpp  02_06_running_threads_in_the_background.cpp  02_07_passing_arguments_to_a_thread_function.cpp  02_08_passing_arguments_to_a_thread_function_2.cpp  02_09_passing_arguments_to_a_thread_function_3.cpp  02_10_returning_a_thread_from_a_function.cpp  02_10_transferring_ownership_of_a_thread.cpp  02_11_scoped_thread.cpp  02_12.cpp  02_13_choosing_the_number_of_threads_at_runtime_and_parallel_accumualate_pending.cpp  02_14_identifying_threads.cpp  03_01_problems_with_sharing_data_between_threads.txt  03_02_avoiding_problematic_race_conditions.txt  03_03_using_mutexes.cpp  03_04_structuring_code_for_protecting_shared_data.cpp  03_05_race_conditions_inherent_in_interfaces.cpp  03_06_race_conditions_inherent_in_interfaces_solutions.cpp  03_07_deadlocks.cpp  03_08_deadlocks_02.cpp  03_09_unique_lock.cpp  03_10_locking_at_appropriate_granularity.cpp  03_11_call_once_and_protecting_shared_data_during_initialization.cpp  03_12_shared_mutex_and_protecting_rarely_updated_data_structures.cpp  03_12_shared_mutex_and_protecting_rarely_updated_data_structures_original_boost_version.cpp  03_13_recursive_locking.cpp  04_01_waiting_for_an_event_or_other_condition.cpp  04_02_condition_variables.cpp  04_03_standard_queue_interface.cpp  04_03a_thread_safe_queue_interface.cpp  04_03b_basic_implementation.cpp  04_03c_thread_safe_queue_implementation.cpp  04_04_std_async_and_std_future.cpp  04_05_packaged_task.cpp  04_06_promises.cpp  (+17 more)
move/: 01.txt
ms_doc/: resources.txt
shared_ptr/: a.out  log.txt  q01.cpp  q02.cpp  q03.cpp  q04.cpp  q05.cpp
unique_ptr/: a.out  q01.txt  q02.txt  q03.cpp  q04.cpp  q06.txt  q07.cpp  q08.cpp  q09.cpp  q10.txt  q11.txt  q12.cpp  q13.cpp  q14.txt  q15.cpp  q16.cpp  temp.cpp  temp2.cpp
